@@ -2019,7 +2019,7 @@ Daniel Nylander
                                 <property name="can_focus">False</property>
                                 <property name="orientation">vertical</property>
                                 <child>
-                                  <object class="GtkLabel" id="label115">
+                                  <object class="GtkLabel" id="label11">
                                     <property name="visible">True</property>
                                     <property name="can_focus">False</property>
                                     <property name="halign">start</property>
@@ -2057,16 +2057,17 @@ Daniel Nylander
                               </packing>
                             </child>
                             <child>
-                              <object class="GtkBox" id="vbox49">
+                              <object class="GtkBox" id="vbox14">
                                 <property name="visible">True</property>
                                 <property name="can_focus">False</property>
                                 <property name="orientation">vertical</property>
                                 <child>
-                                  <object class="GtkLabel" id="label116">
+                                  <object class="GtkLabel" id="label12">
                                     <property name="visible">True</property>
                                     <property name="can_focus">False</property>
                                     <property name="halign">start</property>
-                                    <property name="label" translatable="yes">Traffic Statistics</property>
+                                    <property name="label" translatable="yes">Statistics</property>
+                                    <property name="use_underline">True</property>
                                   </object>
                                   <packing>
                                     <property name="expand">False</property>
@@ -2075,15 +2076,17 @@ Daniel Nylander
                                   </packing>
                                 </child>
                                 <child>
-                                  <object class="GtkSpinButton" id="link_to_spin">
+                                  <object class="GtkSpinButton" id="proto_link_to_spin">
                                     <property name="visible">True</property>
                                     <property name="can_focus">True</property>
-                                    <property name="tooltip_text" translatable="yes">Delete this link from memory after this much time. 0 means never timeout.</property>
+                                    <property name="tooltip_text" translatable="yes">Remove this link from the diagram after this much time. 0 means never timeout.</property>
+                                    <property name="text" translatable="yes">10</property>
                                     <property name="primary_icon_activatable">False</property>
                                     <property name="secondary_icon_activatable">False</property>
-                                    <property name="adjustment">adjustment10</property>
+                                    <property name="adjustment">adjustment9</property>
                                     <property name="climb_rate">1</property>
                                     <property name="update_policy">if-valid</property>
+                                    <property name="value">10</property>
                                   </object>
                                   <packing>
                                     <property name="expand">False</property>
@@ -2096,48 +2099,6 @@ Daniel Nylander
                                 <property name="expand">True</property>
                                 <property name="fill">True</property>
                                 <property name="position">1</property>
-                              </packing>
-                            </child>
-                            <child>
-                              <object class="GtkBox" id="vbox50">
-                                <property name="visible">True</property>
-                                <property name="can_focus">False</property>
-                                <property name="orientation">vertical</property>
-                                <child>
-                                  <object class="GtkLabel" id="label117">
-                                    <property name="visible">True</property>
-                                    <property name="can_focus">False</property>
-                                    <property name="halign">start</property>
-                                    <property name="label" translatable="yes">Protocol Statistics</property>
-                                  </object>
-                                  <packing>
-                                    <property name="expand">False</property>
-                                    <property name="fill">False</property>
-                                    <property name="position">0</property>
-                                  </packing>
-                                </child>
-                                <child>
-                                  <object class="GtkSpinButton" id="proto_link_to_spin">
-                                    <property name="visible">True</property>
-                                    <property name="can_focus">True</property>
-                                    <property name="tooltip_text" translatable="yes">Expire protocol statistics for a node after this much time. 0 means never timeout.</property>
-                                    <property name="primary_icon_activatable">False</property>
-                                    <property name="secondary_icon_activatable">False</property>
-                                    <property name="adjustment">adjustment11</property>
-                                    <property name="climb_rate">1</property>
-                                    <property name="update_policy">if-valid</property>
-                                  </object>
-                                  <packing>
-                                    <property name="expand">False</property>
-                                    <property name="fill">False</property>
-                                    <property name="position">1</property>
-                                  </packing>
-                                </child>
-                              </object>
-                              <packing>
-                                <property name="expand">True</property>
-                                <property name="fill">True</property>
-                                <property name="position">2</property>
                               </packing>
                             </child>
                           </object>
@@ -2183,6 +2144,20 @@ Daniel Nylander
                                 <property name="can_focus">False</property>
                                 <property name="orientation">vertical</property>
                                 <child>
+                                  <object class="GtkLabel" id="label13">
+                                    <property name="visible">True</property>
+                                    <property name="can_focus">False</property>
+                                    <property name="halign">start</property>
+                                    <property name="label" translatable="yes">Statistics</property>
+                                    <property name="use_underline">True</property>
+                                  </object>
+                                  <packing>
+                                    <property name="expand">False</property>
+                                    <property name="fill">False</property>
+                                    <property name="position">0</property>
+                                  </packing>
+                                </child>
+                                <child>
                                   <object class="GtkSpinButton" id="proto_to_spin">
                                     <property name="visible">True</property>
                                     <property name="can_focus">True</property>
@@ -2196,7 +2171,7 @@ Daniel Nylander
                                   <packing>
                                     <property name="expand">False</property>
                                     <property name="fill">False</property>
-                                    <property name="position">0</property>
+                                    <property name="position">1</property>
                                   </packing>
                                 </child>
                               </object>
@@ -2204,17 +2179,6 @@ Daniel Nylander
                                 <property name="expand">True</property>
                                 <property name="fill">True</property>
                                 <property name="position">0</property>
-                              </packing>
-                            </child>
-                            <child>
-                              <object class="GtkLabel" id="label119">
-                                <property name="visible">True</property>
-                                <property name="can_focus">False</property>
-                              </object>
-                              <packing>
-                                <property name="expand">False</property>
-                                <property name="fill">False</property>
-                                <property name="position">1</property>
                               </packing>
                             </child>
                             <child>
@@ -2433,6 +2397,9 @@ Daniel Nylander
     <property name="default_height">300</property>
     <property name="has_resize_grip">True</property>
     <signal name="delete-event" handler="on_node_info_delete_event" swapped="no"/>
+    <child>
+      <placeholder/>
+    </child>
     <child>
       <placeholder/>
     </child>
@@ -2808,6 +2775,9 @@ Daniel Nylander
       <placeholder/>
     </child>
     <child>
+      <placeholder/>
+    </child>
+    <child>
       <object class="GtkBox" id="vbox7">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
@@ -2869,6 +2839,9 @@ Daniel Nylander
   <object class="GtkWindow" id="prot_info">
     <property name="can_focus">False</property>
     <signal name="delete-event" handler="on_prot_info_delete_event" swapped="no"/>
+    <child>
+      <placeholder/>
+    </child>
     <child>
       <placeholder/>
     </child>
@@ -3052,6 +3025,9 @@ Daniel Nylander
     <property name="default_width">550</property>
     <property name="default_height">300</property>
     <signal name="delete-event" handler="on_delete_protocol_window" swapped="no"/>
+    <child>
+      <placeholder/>
+    </child>
     <child>
       <placeholder/>
     </child>
